--- a/book-store/src/style.css
+++ b/book-store/src/style.css
@@ -1,4 +1,25 @@
 body {
     margin: 0;
     padding: 0;
+
+
+
+
+
+
+
+
+
+/* 
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    justify-content: space-between; */
+
+  /* color: rgb(150, 68, 197); */
+
+  
+
+
 }
