--- a/book-store/src/style.css
+++ b/book-store/src/style.css
@@ -1,25 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Modak&family=Roboto:wght@300;400;500&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-
-
-
-
-
-
-
-
-
-/* 
-    margin: 0;
-    padding: 0;
-
-    display: flex;
-    justify-content: space-between; */
-
-  /* color: rgb(150, 68, 197); */
-
-  
-
+  /* color: rgb(143, 140, 140);   */
 
 }
+
