--- a/book-store/src/style.css
+++ b/book-store/src/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Modak&family=Roboto:wght@300;400;500&display=swap');
 
+html {
+  scroll-behavior: smooth; 
+}
 body {
     margin: 0;
     padding: 0;
